transport/session/src/balancer/snapshots/hopr_transport_session__balancer__pid__tests__controller_set_target_and_limit_updates_bounds.snap
---
source: transport/session/src/balancer/pid.rs
expression: ctrl.bounds().unzip()
---
- 200
- 100
