transport/session/src/balancer/snapshots/hopr_transport_session__balancer__pid__tests__gains_default_values_are_stable.snap
---
source: transport/session/src/balancer/pid.rs
expression: "(gains.p(), gains.i(), gains.d())"
---
- 0.6
- 0.7
- 0.2
