transport/session/src/balancer/snapshots/hopr_transport_session__balancer__pid__tests__gains_try_from_tuple.snap
---
source: transport/session/src/balancer/pid.rs
expression: "(gains.p(), gains.i(), gains.d())"
---
- 0.5
- 0.3
- 0.1
